--- a/danhgia.html
+++ b/danhgia.html
@@ -77,6 +77,14 @@
         <label for="star2" title="text">2 stars</label>
         <input type="radio" id="star1" name="rate" value="1" />
         <label for="star1" title="text">1 star</label>
+        <form action="#">
+            <div class="textarea">
+                <textarea name="" id="" cols="60" rows="10" placeholder="Trải nghiệm sử dụng sản phẩm từ bạn.."></textarea>
+            </div>
+            <div class="btn">
+                <button type="submit">Đánh giá</button>
+            </div>
+        </form>
       </div>
 </body>
 </html>
