--- a/vanchuyen.html
+++ b/vanchuyen.html
@@ -8,7 +8,7 @@
     <style>
         p{
             text-align: center;
-            color: grey;
+            color: white;
         }
         img.cangiua{
         display: block;
