--- a/baohanh.html
+++ b/baohanh.html
@@ -26,7 +26,7 @@
             <div class="form-group">
                 
                <label for="" class="font">Lời nhắn: </label> <br>
-               <textarea rows="5" class="form-control"></textarea>
+               <textarea cols="60" rows="10" class="form-control"></textarea>
            
            </div>
             <input type="submit" value="Gửi" class="form-button">
